# infrastructures

./: build_visualization_table.py  pyproject.toml
.github/: copilot-instructions.md
data/: export - Actions_Timeline.csv  export - Discursive_Oil.csv  export - Ecosystem.csv  export - Entity.csv  export - Images.csv  export - Infrastructure.csv  export - Licenses.csv  export - Location.csv  export - People.csv  export - Related_Events.csv  export - Role.csv  export - Source.csv  export - Transactions.csv
docs/: data.json  index.html
