[project]
name = "camilladataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "idna==3.10",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "urllib3==2.5.0",
]
